--- a/test gitignore/MainWindow.xaml
+++ b/test gitignore/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="txb_input" HorizontalAlignment="Left" Height="76" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="225" FontSize="18"/>
+        <Label x:Name="lbl_output" Content="" HorizontalAlignment="Left" Margin="240,10,0,0" VerticalAlignment="Top" Width="225" Height="76" FontSize="18"/>
     </Grid>
 </Window>
